--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,11 +23,11 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <base href="/" />
-    <title>Kabal Klage og Anke</title>
+    <title>KABAL - Klage og Anke</title>
+    <script async type="application/javascript" src="/pdf.worker.js"></script>
+    <script async type="application/javascript" src="/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
-    <script type="application/javascript" src="/pdf.worker.js"></script>
-    <script type="application/javascript" src="/bundle.js"></script>
   </body>
 </html>
