--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#ffffff" />
     <base href="/" />
     <title>KABAL - Klage og Anke</title>
-    <script async type="application/javascript" src="/bundle.js"></script>
+    <script async type="application/javascript" src="/main.bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
