--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
       href="/assets/favicon-16x16.png"
     />
 
-    <title>KABAL - Klage og Anke</title>
+    <title>Kabal - Klage og anke</title>
     <script async type="application/javascript" src="/main.bundle.js"></script>
   </head>
   <body>
