Make code aware of environment
Co-authored-by: Christian Skrøvseth <cskrov@users.noreply.github.com>

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="no" data-environment="{{ENVIRONMENT}}" data-version="{{VERSION}}">
   <head>
     <meta charset="UTF-8" />
     <link
