Add Tailwind support

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
 
-  <link href="/assets/fonts/fonts.css" rel="stylesheet">
+  <link href="/index.css" rel="stylesheet">
 
   <title>Kabal - Klage og anke</title>
   <script async type="module" src="/src/index.tsx"></script>
