--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="no" data-environment="{{ENVIRONMENT}}" data-version="{{VERSION}}" data-theme="light">
+<html lang="no" data-environment="{{ENVIRONMENT}}" data-version="{{VERSION}}" data-theme="light"
+  class="h-full w-full m-0 p-0 overflow-hidden text-base font-display">
 
 <head>
   <meta charset="UTF-8" />
@@ -13,8 +14,8 @@
   <script async type="module" src="/src/index.tsx"></script>
 </head>
 
-<body>
-  <div id="app"></div>
+<body class="h-full w-full m-0 p-0 overflow-hidden text-base">
+  <div id="app" class="flex flex-col h-full w-full m-0 p-0 overflow-hidden text-base"></div>
 </body>
 
 </html>
