Force base font size

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="no" data-environment="{{ENVIRONMENT}}" data-version="{{VERSION}}" data-theme="light"
-  class="h-full w-full m-0 p-0 overflow-hidden text-base font-display">
+  style="font-size: 16px;" class="h-full w-full m-0 p-0 overflow-hidden text-base font-display">
 
 <head>
   <meta charset="UTF-8" />
